syntax = "proto3";

package protobuf;

import "google/api/annotations.proto";

option go_package = "./";

service AuthMsService {
    rpc SignIn (AuthRequest) returns (TokenResponse){
        option (google.api.http) = {
            post: "/SignIn"
            body: "*"
        };
    };

    rpc SignUp (AuthRequest) returns (SignUpResponse){
        option (google.api.http) = {
            post: "/SignUp"
            body: "*"
        };
    };

    rpc WhoAmI (AccessTokenRequest) returns (UserResponse){
        option (google.api.http) = {
            get: "/WhoAmI"
        };
    };
}

message AuthRequest{
    string Login = 1;
    string Password = 2;
}

message SignUpResponse{
    string Status = 1;
}

message TokenResponse{
    string AccessToken = 1;
    string RefreshToken = 2;
}

message AccessTokenRequest{
    string AccessToken = 1;
}

message UserResponse{
    int32 Id = 1;
}